--- a/react-app/src/components/LeftPanel/leftPanel.css
+++ b/react-app/src/components/LeftPanel/leftPanel.css
@@ -4,8 +4,8 @@
 
 .inbox {
   border: 5px solid #e6e6e6;
+  margin-bottom: 10px;
 }
-
 ul.list-name {
   border: 5px solid #e6e6e6;
   padding-left: 0px
