--- a/react-app/src/components/TaskList/tasklist.css
+++ b/react-app/src/components/TaskList/tasklist.css
@@ -1,7 +1,7 @@
 /*============= id ============*/
-#outter2 {
+/* #outter2 {
     text-align: center;
-}
+} */
 
 #allpanel {
     display: grid;
@@ -17,17 +17,13 @@
     height: 26px;
 }
 
-.addtaskbar {
-    display: inline-flex;
-}
+
 
 .height-26px {
     height: 26px;
 }
 
-.border-none {
-    border: none;
-}
+
 
 .border-none:hover {
     background-color: var(--blue-0bf);
@@ -41,6 +37,19 @@
     grid-template-columns: 5fr 2.5fr 2.5fr;
 }
 
+
+.width-400p {
+    width: 400px;
+}
+
+
+.width-70 {
+    width: 70%;
+}
+
+.width-30 {
+    width: 30%;
+}
 
 /*============ html tag =============*/
 
